plugin/abs_theme_stately/view/css/bbs.css
/* ... */
.layout-quick-reply-form .newpost:hover .quick_reply-prompt,
.layout-quick-reply-form .newpost:focus-within .quick_reply-prompt,
.layout-quick-reply-form .newpost:focus .quick_reply-prompt {
    height: 0;
    padding: 0;
    border-width: 0;
    margin-bottom: 0;
}

.comments .postlist .quote {
    padding: .5rem;
    border: 2px dotted var(--primary);
}

input[name="quotepid"]:not([value="0"])~div .post-submit .btn:before {
    content: "\f3e5";
    user-select: none;
    font-family: 'Line Awesome Free';
    font-weight: 900;
    font-style: normal;
}

/* 菜单是可以横向滑动的 */
@media (max-width:576px) {

    .route-my.action-thread #my_aside .list-group.list-group-horizontal:after,
    .route-my.action-profile #my_aside .list-group.list-group-horizontal:after,
    .route-user.action-thread #user_aside .list-group.list-group-horizontal:after,
    .route-user.action-profile #user_aside .list-group.list-group-horizontal:after,
    .route-my.action-thread #my_aside[data-style="classic_v1"] .list-group:after,
    .route-my.action- #my_aside[data-style="classic_v1"] .list-group:after,
    .route-user.action-thread #user_aside[data-style="classic_v1"] .list-group:after,
    .route-user.action-profile #user_aside[data-style="classic_v1"] .list-group:after

    /*, 
    .route-my.action-thread #my_main .my_subnav .nav:after, 
    .route-my.action-profile #my_main .my_subnav .nav:after, 
    .route-user.action-thread #user_main .user_subnav .nav:after,
    .route-user.action-profile #user_main .user_subnav .nav:after*/
        {
        content: "向右滑动以查看更多";
        position: absolute;
        right: 0;
        top: -1.5em;
        animation: menuAnimation 2s 1 ease-out reverse;
        opacity: 0;
        pointer-events: none;
        user-select: none;
    }

}

/* bugfix */
.card-body .card-header-pills {
    margin-right: -1.5rem;
    margin-left: -1.5rem;
}

.card-body.py-2 .card-header-pills {
    margin-top: -0.5rem;
}

.nav-pills .nav-item.active .nav-link {
    background-color: var(--bs-primary);
    color: var(--bs-white);
    box-shadow: 0 2px 4px 0 var(--sn-primary-box-shadow);
}

.navbar .breadcrumb {
    margin-bottom: 0;
}

.navbar .breadcrumb .breadcrumb-item.active,
.navbar .breadcrumb .breadcrumb-item a.active {
    font-weight: inherit;
}

.layout-navbar .breadcrumb {
    flex-wrap: nowrap;
}

.layout-navbar .breadcrumb .breadcrumb-item {
    overflow: hidden;
    height: calc(1em * var(--bs-body-line-height));
    text-overflow: ellipsis;
    white-space: nowrap;
    max-width: 16em;
    display: block;
}

.message img {
    max-width: 100%;
    height: auto;
}

.style-blog_v1 .img-fluid {
    object-position: center;
    object-fit: cover;
}

i.useronline {
    left: 0;
    transform: scale(0.75) translate(-25%, -25%);
}

table.card-header .nav-item>a {
    padding: .25em;
    border-radius: .375rem;
    color: inherit;
}

table.card-header .nav-item>a.active {
    background: var(--bs-gray-100);
    color: var(--bs-primary);
}

.user-profile-header .btn.btn-block {
    display: inline-block;
    width: fit-content;
}

.user-profile-header .btn {
    margin: 0.25em;
}

.user-profile-header .btn.btn-primary.confirm.btn-block+.col-12.row {
    display: none;
}

#v_select_form input[type="radio"]:checked~.card .verified-badge {
    box-shadow: 0 0 1em -0.2em var(--bs-white);
}

.nav_tag_list a:not(.active) {
    color: var(--bs-body-color);
}

.style-blog_v1 .card-image {
    object-fit: cover;
}

[data-layout=blog] .text-white .post-heading {
    backdrop-filter: blur(0.25em);
    text-shadow: 0 0 0.5em #000
}

#statelyNewPostOffcanvasModal {
    height: auto;
}

.custom-select.form-select {
    height: auto;
}

.menu-vertical .menu-inner>.menu-item {
    position: relative;
}

.menu-vertical .nav .nav-item .nav-link {
    margin: 0rem 1rem;
    padding: .625rem 1rem;
    width: 100%;
}

.menu-vertical li:not(.menu-block) .nav .nav-item .nav-link {
    width: 100%;
}

label.btn {
    display: inline-block;
}

.input-group-text:focus {
    outline: none;
}

.card-userinfo[data-style="v2"] .list-group a {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: space-between;
}

.input-group:not(.has-validation)>.form-floating>.form-control {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.menu-inner-shadow {
    top: 4rem;
}

#barbara_loading {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1120;
    opacity: 0;
    background: var(--bs-body-bg);
    display: flex;
    align-items: center;
    justify-content: center;
    pointer-events: none;
    user-select: none;
    transition: all 0.25s ease-in-out;
}

@media(max-width:991.98px) {
    .card-userinfo.with-header-banner~.menu-inner-shadow {
        top: 6.75rem;
    }
}

#desktop_nav_menu_legacy .navbar-nav {
    align-items: center;
}

#sidebar_menu_legacy .menu-block {
    padding-top: 0;
}

#sidebar_menu_legacy .menu-header {
    margin-bottom: 0
}

#sidebar_menu_legacy a[href~="my-notice.htm"] {
    flex-direction: row-reverse;
    justify-content: flex-end;
}

:root:not(.layout-menu-collapsed) .layout-menu.menu-vertical #sidebar_menu_legacy ul li.active {
    color: var(--bs-primary);
    background-color: var(--bs-gray-100);
}

#sidebar_menu_legacy ul li.active {
    transition: background-color .125s ease-in-out;
}

#sidebar_menu_legacy ul li.active a {
    color: var(--bs-primary);
}

#sidebar_menu_legacy ul li {
    border-radius: .375rem;
}

.message>.fieldset {
    position: relative;
    background-color: transparent;
    background-clip: border-box;
    border-radius: 0.5rem;
    box-shadow: 0 2px 6px 0 rgba(67, 89, 113, 0.12);
    border-style: none;
}

.fieldset>legend {
    background-color: var(--bs-primary);
    border-radius: 0.25em;
}
/* ... */

